2009-09-08  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam-manager-properties.ui:
	  Fix duplicate ids on various widgets.
	* common/libnwamui.c: 
	  Make get_gtk_builder() generate warnings for issues loading the .ui
	  file.

2009-09-08  Darren Kenny  <darren.kenny@sun.com>

	* configure.in:
	  Bump to 0.99.9 for new build.

2009-09-07  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_condition_vbox.c: 
	  Fix defect#11048 where the configured NCU wasn't being located since
	  the rule used the qualified name, but we were comparing against the
	  device name.
	* capplet/nwam_rules_dialog.c: 
	  Don't unref the label widget after setting the a11y label-for
	  relationship since it wasn't ref-ed in the first place.

2009-09-07  Darren Kenny  <darren.kenny@sun.com>

	* capplet/capplet-utils.c: 
	  Fix an issue with capplet_model_find_object, where it wasn't ever
	  finding an object, causing the UI to not see a row-changed event
	  when toggling locations.
	* capplet/nwam_location_dialog.c, capplet/nwam_vpn_pref_dialog.c:
	  Fix defect#11045 where the remove button wasn't disabled for the
	  currently active ENM or Location, and for locations, also unset the
	  enabled flag on the prior location.

2009-09-07  Darren Kenny  <darren.kenny@sun.com>

	* daemon/nwam-wifi-item.c:
	  Add descriptions for wireless strength and security icons, 
	  fixing defect#11157.
	* capplet/nwam-manager-properties.ui:
	  Add 'label-for' to labels, fixing defect#10761.
	* capplet/nwam_rules_dialog.c: 
	  Add 'label-for' to label for created conditions table, also 
	  fixing defect#10761.
	* common/libnwamui.h, common/libnwamui.c: 
	  Add some a11y utility functions used for above fixes:
	  - nwamui_util_set_a11y_label_for_widget
	  - nwamui_util_set_widget_a11y_info.
	* capplet/capplet-utils.c: 
	  Fix issue found with duplicate name checking where it was checking
	  self too giving error.

2009-09-07  Darren Kenny  <darren.kenny@sun.com>

	* capplet/capplet-utils.c: 